update Y1005A1